--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 	"postgres_url": "postgresql://postgres:jECwxWQvychH5icKD8v327PZ@zelos-beta.chbhnz1dvnud.us-west-2.rds.amazonaws.com:5432/zelos",
-	"backend_url": "https://beta-backend-pr-354.onrender.com",
+	"backend_url": "https://beta-backend.onrender.com",
 	"recordings_directory": "/var/data/recordings",
 	"bind_address": "0.0.0.0:10000",
 	"riot_api_key": "RGAPI-2a6ef331-90d7-4c13-b9c0-641fd850a783",
