--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 	"postgres_url": "postgresql://postgres:jECwxWQvychH5icKD8v327PZ@zelos-beta.chbhnz1dvnud.us-west-2.rds.amazonaws.com:5432/zelos",
-	"backend_url": "https://beta-backend.onrender.com",
+        "backend_url": "https://beta-backend.onrender.com",
 	"recordings_directory": "/data",
 	"bind_address": "0.0.0.0:5000",
 	"riot_api_key": "RGAPI-2a6ef331-90d7-4c13-b9c0-641fd850a783",
@@ -8,5 +8,7 @@
 	"keep_recordings_days": 30,
 	"show_per_page": 20,
 	"show_replay_port_as": 5000,
-	"admin_key": "D300A047-F994-488F-A9F5-4C4C9ECF891"
+	"admin_key": "D300A047-F994-488F-A9F5-4C4C9ECF891",
+	"total_shards": 3,
+	"shard": 2
 }
